// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Benefits > renders eligibility for low-income HoH with kids (admin_cmh_bbce) 1`] = `
<div>
  <div
    style="margin-bottom: 40px;"
  >
    <div
      style="margin-bottom: 16px; margin-top: 8px;"
    >
      <div
        style="font-size: 0.6875rem; letter-spacing: 0.18em; text-transform: uppercase; color: rgb(166, 38, 28); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 600; margin-bottom: 6px;"
      >
        Benefits & safety net
        <span
          style="position: relative; display: inline-block; vertical-align: middle;"
        >
          <button
            aria-expanded="false"
            aria-label="1 sources, worst status: ai-verified"
            style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
            type="button"
          >
            <span
              style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
            />
            source · 1 ↗
          </button>
        </span>
      </div>
      <div
        style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-weight: 500; color: rgb(27, 24, 21); letter-spacing: -0.01em;"
      >
        Programs you may qualify for
      </div>
    </div>
    <div
      style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 16px;"
    >
      <div
        role="button"
        style="padding: 16px 18px; background: rgba(184, 116, 43, 0.06); color: rgb(27, 24, 21); border: 1.5px solid rgb(184, 116, 43); cursor: not-allowed; opacity: 1; transition: all 0.15s; position: relative;"
        tabindex="-1"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 4px; gap: 8px;"
        >
          <div
            style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-size: 1.125rem; font-weight: 500; display: inline-flex; align-items: center; gap: 6px; line-height: 1.1;"
          >
            <span>
              SNAP
            </span>
            <span
              style="position: relative; display: inline-block; vertical-align: middle;"
            >
              <button
                aria-expanded="false"
                aria-label="2 sources, worst status: ai-verified"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
                type="button"
              >
                <span
                  style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
                />
                sources · 2 ↗
              </button>
            </span>
          </div>
          <span
            style="font-size: 0.625rem; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(244, 239, 227); background: rgb(184, 116, 43); padding: 2px 6px; border-radius: 2px; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; white-space: nowrap;"
          >
            Eligible · $0
          </span>
        </div>
        <div
          style="font-size: 0.8125rem; line-height: 1.5; color: rgb(90, 79, 66); margin-bottom: 8px;"
        >
          Federal food assistance, scaled to household size and income. Loaded onto an EBT card monthly.
        </div>
        <div
          style="position: relative; display: inline-block;"
        >
          <button
            aria-expanded="false"
            style="background: transparent; border: medium; padding: 0px; cursor: pointer; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-size: 0.75rem; font-weight: 600; color: rgb(184, 116, 43); text-decoration: underline; text-decoration-style: dotted; text-underline-offset: 3px; letter-spacing: 0.02em;"
            type="button"
          >
            Phantom eligibility
          </button>
        </div>
        <div
          style="margin-top: 10px; padding-top: 10px; border-top: 1px dashed rgb(214, 203, 177); font-size: 0.6875rem; line-height: 1.5; color: rgb(90, 79, 66); font-style: italic;"
        >
          OH raises the gross-income limit to 185% of FPL (≈ $50,542/yr for a household of 3) via Broad-Based Categorical Eligibility.
        </div>
      </div>
      <div
        role="button"
        style="padding: 16px 18px; background: rgb(251, 248, 239); color: rgb(27, 24, 21); border: 1px solid rgb(214, 203, 177); cursor: not-allowed; opacity: 0.55; transition: all 0.15s; position: relative;"
        tabindex="-1"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 4px; gap: 8px;"
        >
          <div
            style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-size: 1.125rem; font-weight: 500; display: inline-flex; align-items: center; gap: 6px; line-height: 1.1;"
          >
            <span>
              Medicaid
            </span>
            <span
              style="position: relative; display: inline-block; vertical-align: middle;"
            >
              <button
                aria-expanded="false"
                aria-label="3 sources, worst status: ai-verified"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
                type="button"
              >
                <span
                  style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
                />
                sources · 3 ↗
              </button>
            </span>
          </div>
          <span
            style="font-size: 0.625rem; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(133, 120, 106); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 600; white-space: nowrap;"
          >
            Not eligible
          </span>
        </div>
        <div
          style="font-size: 0.8125rem; line-height: 1.5; color: rgb(90, 79, 66); margin-bottom: 8px;"
        >
          Free or near-free health coverage for low-income households. Eligibility depends on whether your state expanded Medicaid under the ACA.
        </div>
        <div
          style="font-size: 0.75rem; color: rgb(133, 120, 106); line-height: 1.5;"
        >
          Income exceeds 138% FPL (~$37,702/yr for a household of 3).
        </div>
        <div
          style="margin-top: 10px; padding-top: 10px; border-top: 1px dashed rgb(214, 203, 177); font-size: 0.6875rem; line-height: 1.5; color: rgb(90, 79, 66); font-style: italic;"
        >
          OH expanded Medicaid under the ACA — all adults qualify up to 138% of FPL.
        </div>
      </div>
      <div
        role="button"
        style="padding: 16px 18px; background: rgb(251, 248, 239); color: rgb(27, 24, 21); border: 1px solid rgb(214, 203, 177); cursor: pointer; opacity: 1; transition: all 0.15s; position: relative;"
        tabindex="0"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 4px; gap: 8px;"
        >
          <div
            style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-size: 1.125rem; font-weight: 500; display: inline-flex; align-items: center; gap: 6px; line-height: 1.1;"
          >
            <span>
              CHIP
            </span>
            <span
              style="position: relative; display: inline-block; vertical-align: middle;"
            >
              <button
                aria-expanded="false"
                aria-label="3 sources, worst status: ai-verified"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
                type="button"
              >
                <span
                  style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
                />
                sources · 3 ↗
              </button>
            </span>
          </div>
          <span
            style="font-size: 0.625rem; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(45, 80, 22); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; white-space: nowrap;"
          >
            Eligible · Click to claim
          </span>
        </div>
        <div
          style="font-size: 0.8125rem; line-height: 1.5; color: rgb(90, 79, 66); margin-bottom: 8px;"
        >
          Low-cost health coverage for children in families above the Medicaid limit. State-set income threshold, typically 200%–400% FPL.
        </div>
        <div
          style="font-family: "IBM Plex Mono", ui-monospace, "SFMono-Regular", monospace; font-size: 1rem; margin-bottom: 4px; color: rgb(45, 80, 22); font-weight: 600;"
        >
          ~
          $860
          /mo
        </div>
        <div
          style="font-size: 0.6875rem; color: rgb(133, 120, 106);"
        >
          Reduces the kids' share of healthcare.
        </div>
        <div
          style="margin-top: 10px; padding-top: 10px; border-top: 1px dashed rgb(214, 203, 177); font-size: 0.6875rem; line-height: 1.5; color: rgb(90, 79, 66); font-style: italic;"
        >
          OH covers children up to 211% of FPL through CHIP.
        </div>
      </div>
    </div>
    <div
      style="margin-top: 12px; font-size: 0.75rem; color: rgb(133, 120, 106); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; line-height: 1.6;"
    >
      Eligibility uses simplified federal rules. Real eligibility involves asset tests, immigration status, and state-specific variations not modeled here. Most programs are means-tested and shown as 
      <em>
        not eligible
      </em>
       when household income is too high.
    </div>
  </div>
</div>
`;

exports[`Benefits > renders no eligibility for high-income household (exec_nyc) 1`] = `
<div>
  <div
    style="margin-bottom: 40px;"
  >
    <div
      style="margin-bottom: 16px; margin-top: 8px;"
    >
      <div
        style="font-size: 0.6875rem; letter-spacing: 0.18em; text-transform: uppercase; color: rgb(166, 38, 28); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 600; margin-bottom: 6px;"
      >
        Benefits & safety net
        <span
          style="position: relative; display: inline-block; vertical-align: middle;"
        >
          <button
            aria-expanded="false"
            aria-label="1 sources, worst status: ai-verified"
            style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
            type="button"
          >
            <span
              style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
            />
            source · 1 ↗
          </button>
        </span>
      </div>
      <div
        style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-weight: 500; color: rgb(27, 24, 21); letter-spacing: -0.01em;"
      >
        Programs you may qualify for
      </div>
    </div>
    <div
      style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 16px;"
    >
      <div
        role="button"
        style="padding: 16px 18px; background: rgb(251, 248, 239); color: rgb(27, 24, 21); border: 1px solid rgb(214, 203, 177); cursor: not-allowed; opacity: 0.55; transition: all 0.15s; position: relative;"
        tabindex="-1"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 4px; gap: 8px;"
        >
          <div
            style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-size: 1.125rem; font-weight: 500; display: inline-flex; align-items: center; gap: 6px; line-height: 1.1;"
          >
            <span>
              SNAP
            </span>
            <span
              style="position: relative; display: inline-block; vertical-align: middle;"
            >
              <button
                aria-expanded="false"
                aria-label="2 sources, worst status: ai-verified"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
                type="button"
              >
                <span
                  style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
                />
                sources · 2 ↗
              </button>
            </span>
          </div>
          <span
            style="font-size: 0.625rem; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(133, 120, 106); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 600; white-space: nowrap;"
          >
            Not eligible
          </span>
        </div>
        <div
          style="font-size: 0.8125rem; line-height: 1.5; color: rgb(90, 79, 66); margin-bottom: 8px;"
        >
          Federal food assistance, scaled to household size and income. Loaded onto an EBT card monthly.
        </div>
        <div
          style="font-size: 0.75rem; color: rgb(133, 120, 106); line-height: 1.5;"
        >
          Income exceeds 200% of the federal poverty level (~$66,000/yr for a household of 4).
        </div>
        <div
          style="margin-top: 10px; padding-top: 10px; border-top: 1px dashed rgb(214, 203, 177); font-size: 0.6875rem; line-height: 1.5; color: rgb(90, 79, 66); font-style: italic;"
        >
          NY raises the gross-income limit to 200% of FPL (≈ $66,000/yr for a household of 4) via Broad-Based Categorical Eligibility.
        </div>
      </div>
      <div
        role="button"
        style="padding: 16px 18px; background: rgb(251, 248, 239); color: rgb(27, 24, 21); border: 1px solid rgb(214, 203, 177); cursor: not-allowed; opacity: 0.55; transition: all 0.15s; position: relative;"
        tabindex="-1"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 4px; gap: 8px;"
        >
          <div
            style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-size: 1.125rem; font-weight: 500; display: inline-flex; align-items: center; gap: 6px; line-height: 1.1;"
          >
            <span>
              Medicaid
            </span>
            <span
              style="position: relative; display: inline-block; vertical-align: middle;"
            >
              <button
                aria-expanded="false"
                aria-label="3 sources, worst status: ai-verified"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
                type="button"
              >
                <span
                  style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
                />
                sources · 3 ↗
              </button>
            </span>
          </div>
          <span
            style="font-size: 0.625rem; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(133, 120, 106); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 600; white-space: nowrap;"
          >
            Not eligible
          </span>
        </div>
        <div
          style="font-size: 0.8125rem; line-height: 1.5; color: rgb(90, 79, 66); margin-bottom: 8px;"
        >
          Free or near-free health coverage for low-income households. Eligibility depends on whether your state expanded Medicaid under the ACA.
        </div>
        <div
          style="font-size: 0.75rem; color: rgb(133, 120, 106); line-height: 1.5;"
        >
          Income exceeds 138% FPL (~$45,540/yr for a household of 4).
        </div>
        <div
          style="margin-top: 10px; padding-top: 10px; border-top: 1px dashed rgb(214, 203, 177); font-size: 0.6875rem; line-height: 1.5; color: rgb(90, 79, 66); font-style: italic;"
        >
          NY expanded Medicaid under the ACA — all adults qualify up to 138% of FPL.
        </div>
      </div>
      <div
        role="button"
        style="padding: 16px 18px; background: rgb(251, 248, 239); color: rgb(27, 24, 21); border: 1px solid rgb(214, 203, 177); cursor: not-allowed; opacity: 0.55; transition: all 0.15s; position: relative;"
        tabindex="-1"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 4px; gap: 8px;"
        >
          <div
            style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-size: 1.125rem; font-weight: 500; display: inline-flex; align-items: center; gap: 6px; line-height: 1.1;"
          >
            <span>
              CHIP
            </span>
            <span
              style="position: relative; display: inline-block; vertical-align: middle;"
            >
              <button
                aria-expanded="false"
                aria-label="3 sources, worst status: ai-verified"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
                type="button"
              >
                <span
                  style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
                />
                sources · 3 ↗
              </button>
            </span>
          </div>
          <span
            style="font-size: 0.625rem; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(133, 120, 106); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 600; white-space: nowrap;"
          >
            Not eligible
          </span>
        </div>
        <div
          style="font-size: 0.8125rem; line-height: 1.5; color: rgb(90, 79, 66); margin-bottom: 8px;"
        >
          Low-cost health coverage for children in families above the Medicaid limit. State-set income threshold, typically 200%–400% FPL.
        </div>
        <div
          style="font-size: 0.75rem; color: rgb(133, 120, 106); line-height: 1.5;"
        >
          Income exceeds 405% FPL (~$133,650/yr for a household of 4).
        </div>
        <div
          style="margin-top: 10px; padding-top: 10px; border-top: 1px dashed rgb(214, 203, 177); font-size: 0.6875rem; line-height: 1.5; color: rgb(90, 79, 66); font-style: italic;"
        >
          NY covers children up to 405% of FPL through CHIP.
        </div>
      </div>
    </div>
    <div
      style="margin-top: 12px; font-size: 0.75rem; color: rgb(133, 120, 106); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; line-height: 1.6;"
    >
      Eligibility uses simplified federal rules. Real eligibility involves asset tests, immigration status, and state-specific variations not modeled here. Most programs are means-tested and shown as 
      <em>
        not eligible
      </em>
       when household income is too high.
    </div>
  </div>
</div>
`;

exports[`Benefits > renders with SNAP claimed (admin_cmh_bbce) 1`] = `
<div>
  <div
    style="margin-bottom: 40px;"
  >
    <div
      style="margin-bottom: 16px; margin-top: 8px;"
    >
      <div
        style="font-size: 0.6875rem; letter-spacing: 0.18em; text-transform: uppercase; color: rgb(166, 38, 28); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 600; margin-bottom: 6px;"
      >
        Benefits & safety net
        <span
          style="position: relative; display: inline-block; vertical-align: middle;"
        >
          <button
            aria-expanded="false"
            aria-label="1 sources, worst status: ai-verified"
            style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
            type="button"
          >
            <span
              style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
            />
            source · 1 ↗
          </button>
        </span>
      </div>
      <div
        style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-weight: 500; color: rgb(27, 24, 21); letter-spacing: -0.01em;"
      >
        Programs you may qualify for
      </div>
    </div>
    <div
      style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 16px;"
    >
      <div
        role="button"
        style="padding: 16px 18px; background: rgb(27, 24, 21); color: rgb(244, 239, 227); border: 1px solid rgb(27, 24, 21); cursor: pointer; opacity: 1; transition: all 0.15s; position: relative;"
        tabindex="0"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 4px; gap: 8px;"
        >
          <div
            style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-size: 1.125rem; font-weight: 500; display: inline-flex; align-items: center; gap: 6px; line-height: 1.1;"
          >
            <span>
              SNAP
            </span>
            <span
              style="position: relative; display: inline-block; vertical-align: middle;"
            >
              <button
                aria-expanded="false"
                aria-label="2 sources, worst status: ai-verified"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
                type="button"
              >
                <span
                  style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
                />
                sources · 2 ↗
              </button>
            </span>
          </div>
          <span
            style="font-size: 0.625rem; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(244, 239, 227); background: rgb(45, 80, 22); padding: 2px 6px; border-radius: 2px; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; white-space: nowrap;"
          >
            ✓ Claimed
          </span>
        </div>
        <div
          style="font-size: 0.8125rem; line-height: 1.5; color: rgb(235, 227, 208); margin-bottom: 8px;"
        >
          Federal food assistance, scaled to household size and income. Loaded onto an EBT card monthly.
        </div>
        <div
          style="position: relative; display: inline-block;"
        >
          <button
            aria-expanded="false"
            style="background: transparent; border: medium; padding: 0px; cursor: pointer; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-size: 0.75rem; font-weight: 600; color: rgb(244, 239, 227); text-decoration: underline; text-decoration-style: dotted; text-underline-offset: 3px; letter-spacing: 0.02em;"
            type="button"
          >
            Phantom eligibility
          </button>
        </div>
        <div
          style="margin-top: 10px; padding-top: 10px; border-top: 1px dashed rgb(90, 79, 66); font-size: 0.6875rem; line-height: 1.5; color: rgb(235, 227, 208); font-style: italic;"
        >
          OH raises the gross-income limit to 185% of FPL (≈ $50,542/yr for a household of 3) via Broad-Based Categorical Eligibility.
        </div>
      </div>
      <div
        role="button"
        style="padding: 16px 18px; background: rgb(251, 248, 239); color: rgb(27, 24, 21); border: 1px solid rgb(214, 203, 177); cursor: not-allowed; opacity: 0.55; transition: all 0.15s; position: relative;"
        tabindex="-1"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 4px; gap: 8px;"
        >
          <div
            style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-size: 1.125rem; font-weight: 500; display: inline-flex; align-items: center; gap: 6px; line-height: 1.1;"
          >
            <span>
              Medicaid
            </span>
            <span
              style="position: relative; display: inline-block; vertical-align: middle;"
            >
              <button
                aria-expanded="false"
                aria-label="3 sources, worst status: ai-verified"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
                type="button"
              >
                <span
                  style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
                />
                sources · 3 ↗
              </button>
            </span>
          </div>
          <span
            style="font-size: 0.625rem; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(133, 120, 106); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 600; white-space: nowrap;"
          >
            Not eligible
          </span>
        </div>
        <div
          style="font-size: 0.8125rem; line-height: 1.5; color: rgb(90, 79, 66); margin-bottom: 8px;"
        >
          Free or near-free health coverage for low-income households. Eligibility depends on whether your state expanded Medicaid under the ACA.
        </div>
        <div
          style="font-size: 0.75rem; color: rgb(133, 120, 106); line-height: 1.5;"
        >
          Income exceeds 138% FPL (~$37,702/yr for a household of 3).
        </div>
        <div
          style="margin-top: 10px; padding-top: 10px; border-top: 1px dashed rgb(214, 203, 177); font-size: 0.6875rem; line-height: 1.5; color: rgb(90, 79, 66); font-style: italic;"
        >
          OH expanded Medicaid under the ACA — all adults qualify up to 138% of FPL.
        </div>
      </div>
      <div
        role="button"
        style="padding: 16px 18px; background: rgb(251, 248, 239); color: rgb(27, 24, 21); border: 1px solid rgb(214, 203, 177); cursor: pointer; opacity: 1; transition: all 0.15s; position: relative;"
        tabindex="0"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 4px; gap: 8px;"
        >
          <div
            style="font-family: "Fraunces Variable", Fraunces, ui-serif, Georgia, serif; font-size: 1.125rem; font-weight: 500; display: inline-flex; align-items: center; gap: 6px; line-height: 1.1;"
          >
            <span>
              CHIP
            </span>
            <span
              style="position: relative; display: inline-block; vertical-align: middle;"
            >
              <button
                aria-expanded="false"
                aria-label="3 sources, worst status: ai-verified"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 5px; font-size: 0.62em; font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(166, 38, 28); padding: 3px 6px 2px; margin: 0px 4px; border: 1px solid rgb(166, 38, 28); border-radius: 2px; background: transparent; text-decoration: none; vertical-align: middle; line-height: 1; cursor: pointer; white-space: nowrap; position: relative; top: -0.1em;"
                type="button"
              >
                <span
                  style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background: transparent; box-shadow: inset 0 0 0 2px #2D5016; flex-shrink: 0;"
                />
                sources · 3 ↗
              </button>
            </span>
          </div>
          <span
            style="font-size: 0.625rem; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(45, 80, 22); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; font-weight: 700; white-space: nowrap;"
          >
            Eligible · Click to claim
          </span>
        </div>
        <div
          style="font-size: 0.8125rem; line-height: 1.5; color: rgb(90, 79, 66); margin-bottom: 8px;"
        >
          Low-cost health coverage for children in families above the Medicaid limit. State-set income threshold, typically 200%–400% FPL.
        </div>
        <div
          style="font-family: "IBM Plex Mono", ui-monospace, "SFMono-Regular", monospace; font-size: 1rem; margin-bottom: 4px; color: rgb(45, 80, 22); font-weight: 600;"
        >
          ~
          $860
          /mo
        </div>
        <div
          style="font-size: 0.6875rem; color: rgb(133, 120, 106);"
        >
          Reduces the kids' share of healthcare.
        </div>
        <div
          style="margin-top: 10px; padding-top: 10px; border-top: 1px dashed rgb(214, 203, 177); font-size: 0.6875rem; line-height: 1.5; color: rgb(90, 79, 66); font-style: italic;"
        >
          OH covers children up to 211% of FPL through CHIP.
        </div>
      </div>
    </div>
    <div
      style="margin-top: 12px; font-size: 0.75rem; color: rgb(133, 120, 106); font-family: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif; line-height: 1.6;"
    >
      Eligibility uses simplified federal rules. Real eligibility involves asset tests, immigration status, and state-specific variations not modeled here. Most programs are means-tested and shown as 
      <em>
        not eligible
      </em>
       when household income is too high.
    </div>
  </div>
</div>
`;
